--- a/app.json
+++ b/app.json
@@ -1,48 +1,61 @@
 {
   "expo": {
-    "name": "camera-swap",
-    "slug": "camera-swap",
+    "name": "SwapCamera",
+    "slug": "swap-camera",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "scheme": "cameraswap",
+    "icon": "./assets/icon.png",
     "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
+    "scheme": "swapcamera",
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#282a36"
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.swapcamera.app",
+      "infoPlist": {
+        "NSCameraUsageDescription": "SwapCamera necesita acceso a la cámara para capturar fotografías.",
+        "NSPhotoLibraryUsageDescription": "SwapCamera necesita acceso a la galería para guardar las fotografías."
+      }
     },
     "android": {
       "adaptiveIcon": {
-        "backgroundColor": "#E6F4FE",
-        "foregroundImage": "./assets/images/android-icon-foreground.png",
-        "backgroundImage": "./assets/images/android-icon-background.png",
-        "monochromeImage": "./assets/images/android-icon-monochrome.png"
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#282a36"
       },
-      "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "package": "com.swapcamera.app",
+      "permissions": [
+        "CAMERA",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE"
+      ]
     },
     "web": {
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-router",
       [
-        "expo-splash-screen",
+        "expo-camera",
         {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff",
-          "dark": {
-            "backgroundColor": "#000000"
-          }
+          "cameraPermission": "SwapCamera necesita acceso a la cámara para capturar fotografías."
+        }
+      ],
+      [
+        "expo-media-library",
+        {
+          "photosPermission": "SwapCamera necesita acceso a la galería para guardar las fotografías.",
+          "savePhotosPermission": "SwapCamera necesita permiso para guardar fotografías en tu galería."
         }
       ]
     ],
     "experiments": {
-      "typedRoutes": true,
-      "reactCompiler": true
+      "typedRoutes": true
     }
   }
 }
